@@ -2,6 +2,8 @@ Changes to Version 2.1-0
 
   o RcmdrDevel
 
+  o Added effect-plots dialog (was invoked directly from Model > Graphs menu).
+
 Changes to Version 2.0-5
 
   o New Basque translation (courtesy of Jose Ramon Rueda).
